--- a/js/components/navbar.html
+++ b/js/components/navbar.html
@@ -1,7 +1,10 @@
 <nav class="navbar">
     <div class="container nav-container">
         <div class="logo">
-            <a href="index.html">MARQUISE <span class="accent">VAULT</span></a>
+            <a href="index.html">
+                <img src="img/logo.jpeg" alt="Marquise Vault Logo" class="nav-logo">
+                MARQUISE <span class="accent">VAULT</span>
+            </a>
         </div>
 
         <ul class="nav-links">
